# py-iconic-api

./: .env.example  .gitignore  README.md  models.py  pyproject.toml
docs/: migration_guide.md  webhook_documentation.md
examples/: comprehensive_example.py  product_management_example.py  resource_based_example.py  webhook_management_example.py
iconic_api/: client.py  exceptions.py
iconic_api/api/: base_api_module.py  brands.py  category.py  orders.py  product.py  product_sets.py
iconic_api/models/: __init__.py  api_requests.py  openapi_generated.py
iconic_api/resources/: __init__.py  base.py  finance.py  invoice.py  order.py  product.py  product_set.py
tests/: test_webhook_integration.py
