[project]
name = "py-iconic-api"
version = "0.1.0"
description = "Python package for interacting with the Iconic API"
authors = [
    {name = "DuneRaccoon",email = "benjamincsherro@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
